# MeowEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Rules.md
engine/: shared-scripts.sh
engine/assets/: layout.ini
engine/assets/shaders/opengl/: grid.frag  physics_collider.frag  physics_collider.vert  sky.frag  sky.vert
engine/console/: CMakeLists.txt  cmake-post-build.sh  create_dot_folder_structure.py  documentation.sh  folder-structure.sh  imgui.ini  setup.sh
engine/emscripten/: CMakeLists.txt  template.html
engine/installer/docs/: Doxyfile  compile-directory.py  create-directory.sh
engine/macos/: project.yml
engine/main/: Doxyfile
engine/main/assets/shaders/opengl/: default.frag
engine/main/src/: engine.cpp  engine.hpp
engine/main/src/application/: application.cpp  application.hpp  opengl_application.cpp  opengl_application.hpp  vulkan_application.hpp
engine/main/src/utils/: internal_ptr.hpp
engine/main/src/wrappers/: bridge_wrapper.hpp  imgui_wrapper.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  tracy_wrapper.hpp
engine/source/: engine.cpp  engine.hpp  main.cpp
engine/source/components/: component_base.hpp  life_object_component.cpp  life_object_component.hpp
engine/source/components/physics/: physics_component_base.hpp
engine/source/components/renderer/: line_render_component.cpp  line_render_component.hpp  mesh_render_component.cpp  mesh_render_component.hpp  render_component_base.cpp  render_component_base.hpp  sky_box_component.cpp  sky_box_component.hpp
engine/source/components/rigidbody/: box_collider_data.cpp  box_collider_data.hpp  collider_component.cpp  collider_component.hpp  collider_data.cpp  collider_data.hpp  collider_type.hpp  rigidbody_component.cpp  rigidbody_component.hpp
engine/source/components/transform/: transform2d_component.cpp  transform2d_component.hpp  transform3d_component.cpp  transform3d_component.hpp  transform_component_base.cpp  transform_component_base.hpp
engine/source/core/: includes.hpp  pstring.cpp  pstring.hpp
engine/source/core/assets/: asset_manager.cpp  asset_manager.hpp
engine/source/core/file-manager/: asset_inventory.cpp  asset_inventory.hpp  asset_manager.hpp  assets.cpp  assets.hpp
engine/source/core/math/: math_wrapper.hpp  quaternion.cpp  quaternion.hpp  vector3.cpp  vector3.hpp
engine/source/core/scene/: main_scene.hpp  scene.hpp
engine/source/core/utils/: internal_ptr.hpp
engine/source/editor/: application.cpp  application.hpp
engine/source/editor/application/: application.cpp  application.hpp
engine/source/editor/graphics/: renderer.hpp
engine/source/editor/input/: input_manager.cpp  input_manager.hpp
engine/source/editor/multithreading/: scoped_atomic_access.cpp  scoped_atomic_access.hpp  thread_barrier.cpp  thread_barrier.hpp  thread_pause.cpp  thread_pause.hpp  thread_wait.cpp  thread_wait.hpp
engine/source/editor/reflections/: entt_reflection.hpp  entt_reflection_wrapper.cpp  entt_reflection_wrapper.hpp  property_type.hpp  reflection_property.cpp  reflection_property.hpp  reflection_property_change.cpp  reflection_property_change.hpp
engine/source/editor/temp/: application_test.cpp  application_test.hpp  custom_barrier.cpp  custom_barrier.hpp  double_buffer.cpp  double_buffer.hpp  entt_buffer.cpp  entt_buffer.hpp  entt_reflection.cpp  entt_reflection.hpp  entt_reflection_wrapper.cpp  entt_reflection_wrapper.hpp  property_type.cpp  property_type.hpp  pstring.cpp  pstring.hpp  reflection_property.hpp  reflection_property_change.cpp  reflection_property_change.hpp  thread_barrier.hpp  triple_buffer.cpp  triple_buffer.hpp  window.cpp  window.hpp
engine/source/editor/window/: fps_counter.cpp  fps_counter.hpp  frame_rate_counter.cpp  frame_rate_counter.hpp  mac_bridge.h  platform.cpp  platform.hpp  sdl_window.cpp  sdl_window.hpp  window_bridge.hpp  window_size.hpp
engine/source/editor/wrappers/: bridge_wrapper.hpp  emscripten_wrapper.hpp  entt_wrapper.cpp  entt_wrapper.hpp  glm_wrapper.hpp  graphics_wrapper.hpp  imgui_wrapper.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  tracy_wrapper.hpp
engine/source/entity/cameras/: camera_controller.cpp  camera_controller.hpp  perspective_camera.cpp  perspective_camera.hpp
engine/source/entity/components/: life_object_component.cpp  life_object_component.hpp
engine/source/entity/mesh/: mesh.cpp  mesh.hpp  static_mesh_instance.cpp  static_mesh_instance.hpp  vertex.cpp  vertex.hpp
engine/source/entity/texture/: bitmap.cpp  bitmap.hpp
engine/source/physics/: physics.cpp  physics.hpp
engine/source/physics/physx/: physx_physics.cpp  physx_physics.hpp
engine/source/scene/: main_scene.cpp  main_scene.hpp  scene.hpp  scene_multi_thread.cpp  scene_multi_thread.hpp  scene_single_thread.cpp  scene_single_thread.hpp
engine/source/scene/tests/: scene_add_remove_entity.cpp  scene_add_remove_entity.hpp
engine/source/systems/entt/: entt_buffer_base.hpp  entt_single_buffer.hpp  entt_single_bufffer.cpp  entt_triple_buffer.cpp  entt_triple_buffer.hpp
engine/source/systems/physics/: physics_system.cpp  physics_system.hpp
engine/source/systems/render/: render_system.cpp  render_system.hpp
installer/docs/: create-directory.sh  create-docs.sh
markdowns/: dependencies.md  how_to_build.md  plan_of_action.md  references.md  versions.md
project/: physicat.code-workspace  shared-scripts.sh
project/console/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh
project/emscripten/: CMakeLists.txt  build.sh  cmake-post-build.sh
project/macos/: .gitignore  Assets  project.yml  setup.sh
project/main/src/: engine.cpp  engine.hpp  main.cpp
project/main/src/application/: application.cpp  application.hpp
project/main/src/core/: graphics_wrapper.hpp  internal_ptr.hpp  log.cpp  platform.cpp  platform.hpp  renderer.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp
project/main/src/engine/: application.cpp
project/main/src/include/: bitmap.h  bitmap.hpp  opengl_texture.hpp  sdl_wrapper.hpp
project/main/src/scene/: main_scene.cpp  main_scene.hpp  scene.cpp  scene.hpp
project/main/src/simulations/: scene.hpp
(+266 files in other folders)
